Sat Feb 14 08:48:10 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ace/TMCast/Group.cpp:

	  Fixed compile errors in daily builds.

Fri Feb 13 12:21:06 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>
 
	* ace/Process_Manager.cpp (wait): If the
	  ACE_Event_Handler::handle_exit() methods kills a managed
 	  process, the process_table_ array is modified before
 	  this->remove_proc (idx) is called. In this case the value of idx
 	  is wrong, so we replace remove_proc(idx) with remove(pid).
  	  Thanks to Carsten Prescher <carsten.prescher@sysde.eads.net> for
 	  reporting this.  This fixes bugid 1743.

Fri Feb 13 09:47:25 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ace/CDR_Stream.cpp (clone_from):

	  The check that is done before we go for an allocation needs to
	  include the CDR alignment. 
	  
	* ace/TMCast/Group.cpp:
	 
	  Use standard macros like ACE_SYNCH_MUTEX that can compile in
	  single-threaded and multi-threaded builds. Thanks to Duane 
	  Binder for providing the patches.

Fri Feb 13 10:50:31 2004  Steve Huston  <shuston@riverace.com>

	* examples/APG/Timers/Task.cpp: In main(), interval should be
	  initialized with 100000 usecs, not 1000, to be .1 sec as the
	  comment indicates. Thanks to Norm Whitehead
	  <Norm_Whitehead@raytheon.com> for reporting this.

	* THANKS: Added Norm Whitehead to the Hall of Fame.

Thu Feb 12 10:40:40 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* docs/ACE-categories.html:

	  Fixed the url location. But the file names will not work since
	  we have broken the  name generation in doxygen. We will fix that
	  next. 

Thu Feb 12 09:34:37 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/depgen.pl:

          Added the ACE_PLATFORM_CONFIG environment variable to the
          replacement list.  I'm not sure why this is desirable, but g++dep
          does it so now depgen.pl does it.

        * bin/DependencyGenerator/DependencyEditor.pm: