@@ -2,7 +2,7 @@
 // $Id$
 
 project : acelib, core {
-  requires     += exceptions
+  requires     += exceptions, threads
   sharedname    = TMCast
   dynamicflags += TMCAST_BUILD_DLL
 }
